@@ -1,5 +1,6 @@
 1.0.6 release
 
+	* fix loading of piece priorities from resume data
 	* improved seed-mode handling (seed-mode will now automatically be left when
 	  performing operations implying it's not a seed)
 	* fixed issue with file priorities and override resume data
